--- a/CommonSense.plist
+++ b/CommonSense.plist
@@ -3,22 +3,22 @@
 <plist version="1.0">
 <dict>
 	<key>baseUrl</key>
-	<string>http://api.sense-os.nl</string>
+	<string>https://api.sense-os.nl</string>
+	<key>data</key>
+	<string>data</string>
+	<key>devices</key>
+	<string>devices</string>
 	<key>jsonSuffix</key>
 	<string>.json</string>
 	<key>login</key>
 	<string>login</string>
 	<key>logout</key>
 	<string>logout</string>
-	<key>devices</key>
-	<string>devices</string>
-	<key>sensors</key>
-	<string>sensors</string>
-	<key>data</key>
-	<string>data</string>
-	<key>users</key>
-	<string>users</string>
 	<key>sensorDevice</key>
 	<string>device</string>
+	<key>sensors</key>
+	<string>sensors</string>
+	<key>users</key>
+	<string>users</string>
 </dict>
 </plist>
