Accelerometer, acceleration and rotation now yield 2 seconds of 50Hz sampling. Compass has been removed from the orientation, since there were some problems.

--- a/Settings.plist
+++ b/Settings.plist
@@ -41,6 +41,10 @@
 	<dict>
 		<key>pollInterval</key>
 		<string>60</string>
+		<key>frequency</key>
+		<string>50</string>
+		<key>sampleTime</key>
+		<string>2</string>
 	</dict>
 </dict>
 </plist>
