--- a/sensePlatform-Info.plist
+++ b/sensePlatform-Info.plist
@@ -14,7 +14,7 @@
 		<string>icon</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.almende.sense.sensePlatform</string>
+	<string>com.almende.sense.activityTracker</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,7 +24,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.3</string>
+	<string>0.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<false/>
 	<key>NSMainNibFile</key>
