--- a/sensePlatform-Info.plist
+++ b/sensePlatform-Info.plist
@@ -14,17 +14,19 @@
 		<string>icon</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.almende.sense.sensePlatform</string>
+	<string>com.sense.sensePlatform</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.4</string>
+	<string>1.5</string>
 	<key>LSRequiresIPhoneOS</key>
 	<false/>
 	<key>NSMainNibFile</key>
@@ -40,13 +42,13 @@
 	</array>
 	<key>UIRequiresPersistentWiFi</key>
 	<false/>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
 	<key>UISupportedExternalAccessoryProtocols</key>
 	<array>
 		<string>com.momentumoftechnology.fisica</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 </dict>
 </plist>
