--- a/sensePlatform-Info.plist
+++ b/sensePlatform-Info.plist
@@ -14,7 +14,7 @@
 		<string>icon</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.sense.sensePlatform</string>
+	<string>com.sense.sensePlatform.2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,11 +22,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5</string>
+	<string>1.6</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.5</string>
+	<string>1.6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<false/>
 	<key>NSMainNibFile</key>
@@ -37,15 +37,9 @@
 	<array>
 		<string>location</string>
 		<string>audio</string>
-		<string>external-accessory</string>
-		<string>bluetooth-central</string>
 	</array>
 	<key>UIRequiresPersistentWiFi</key>
 	<false/>
-	<key>UISupportedExternalAccessoryProtocols</key>
-	<array>
-		<string>com.momentumoftechnology.fisica</string>
-	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
